# fitness_flex

./: .dockerignore  Dockerfile  env.d.ts  fitness_generator.py  package.json  pnpm-lock.yaml  pyproject.toml  server.py
api/: .dockerignore  Dockerfile  fitness_generator.py  pyproject.toml  server.py
convex/: auth.config.ts  http.ts
convex/_generated/: api.d.ts
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/(auth)/sign-in/[[...sign-in]]/: page.tsx
src/app/components/: Footer.tsx  Navbar.tsx  NoFitnessPlan.tsx  ProfileHeader.tsx  UserPrograms.tsx
src/app/generate-program/: page.tsx
src/app/profile/: page.tsx
src/lib/: vapi.ts
