[tool.poetry]
name = "api"
version = "0.1.0"
description = "MIT"
authors = ["Ayesha_Shahid <164547404+AyeshaShahid771@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
langgraph = ">=0.6.4,<0.7.0"
langchain-google-genai = ">=2.1.9,<3.0.0"
langchain-core = ">=0.3.74,<0.4.0"
pydantic = ">=2.11.7,<3.0.0"
uvicorn = ">=0.35.0,<0.36.0"
fastapi = ">=0.116.1,<0.117.0"
langchain = ">=0.3.27,<0.4.0"
langchain-groq = "^0.3.7"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
